force-app/main/default/objects/Account_Scoring__c/Account_Scoring__c.object-meta.xml
<CustomObject>
    <label>Account Scoring</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Scoring</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Scoring</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>