force-app/main/default/objects/Account_Scoring__c/fields/Aggregate_Score__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Score__c</fullName>
    <formula>IF(Is_Manual_Scoring__c , IF(NOT(ISNULL( Manual_Score__c )), Manual_Score__c , 0),  Overall_Calculated_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>