force-app/main/default/objects/Account_Scoring__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <formula>IF( AND(Total_Score__c &gt; 0 , Total_Items__c &gt; 0) , Total_Score__c / Total_Items__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>