force-app/main/default/objects/Account_Scoring__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date Calculated Scoring</label>
    <type>Date</type>
</CustomField>