force-app/main/default/objects/Account_Scoring__c/fields/Date_Manual_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Date_Manual_Scoring__c</fullName>
    <label>Date Manual Scoring</label>
    <type>Date</type>
</CustomField>