force-app/main/default/objects/Account_Scoring__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History?</label>
    <type>Checkbox</type>
</CustomField>