force-app/main/default/objects/Account_Scoring__c/fields/Is_Manual_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Scoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manual Scoring?</label>
    <type>Checkbox</type>
</CustomField>