force-app/main/default/objects/Account_Scoring__c/fields/Manual_Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Manual_Display_Type__c</fullName>
    <label>Manual Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>