force-app/main/default/objects/Account_Scoring__c/fields/Manual_Score__c.field-meta.xml
<CustomField>
    <fullName>Manual_Score__c</fullName>
    <label>Manual Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>