force-app/main/default/objects/Account_Scoring__c/fields/Manual_Scoring_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manual_Scoring_Comments__c</fullName>
    <label>Manual Scoring Comments</label>
    <type>TextArea</type>
</CustomField>