force-app/main/default/objects/Account_Scoring__c/fields/Manual_Scoring_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Scoring_Reason__c</fullName>
    <label>Manual Scoring Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product reliability</fullName>
            </value>
            <value>
                <fullName>Network reliability</fullName>
            </value>
            <value>
                <fullName>Product features</fullName>
            </value>
            <value>
                <fullName>Contract Termination</fullName>
            </value>
            <value>
                <fullName>RFP / RFQ</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>