force-app/main/default/objects/Account_Scoring__c/fields/Overall_Calculated_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Calculated_Score__c</fullName>
    <label>Overall Calculated Score</label>
    <summarizedField>Account_Scoring_Item__c.Score__c</summarizedField>
    <summaryForeignKey>Account_Scoring_Item__c.Account_Scoring__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>