force-app/main/default/objects/Account_Scoring__c/fields/Previous_Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Display_Type__c</fullName>
    <label>Previous Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>