force-app/main/default/objects/Account_Scoring__c/fields/Scoring_Model__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Model__c</fullName>
    <label>Scoring Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>