force-app/main/default/objects/Account_Scoring__c/fields/Scoring_Model_ID__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Model_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scoring Model ID</label>
    <referenceTo>Scoring_Model__c</referenceTo>
    <relationshipLabel>Account Scoring</relationshipLabel>
    <relationshipName>Account_Scoring</relationshipName>
    <type>Lookup</type>
</CustomField>